Fix navbar background on tablet

--- a/styles/NavBackground.module.scss
+++ b/styles/NavBackground.module.scss
@@ -23,7 +23,7 @@
     transition: top 0.6s;
 }
 
-@media screen and (min-width:600px) {
+@media screen and (min-width:1080px) {
     .display {
         display: none;
     }
